--- a/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/MainWidget.ui
+++ b/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/MainWidget.ui
@@ -29,9 +29,9 @@
   <widget class="QWidget" name="Container" native="true">
    <property name="geometry">
     <rect>
-     <x>142</x>
+     <x>45</x>
      <y>38</y>
-     <width>706</width>
+     <width>803</width>
      <height>442</height>
     </rect>
    </property>
@@ -39,9 +39,9 @@
   <widget class="QPushButton" name="AddressBtn">
    <property name="geometry">
     <rect>
-     <x>5</x>
+     <x>0</x>
      <y>40</y>
-     <width>40</width>
+     <width>45</width>
      <height>40</height>
     </rect>
    </property>
@@ -49,7 +49,16 @@
     <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgba(255, 255, 255, 0);</string>
+    <string notr="true">QPushButton {
+	background-color: rgba(255, 255, 255, 0);
+	border:none;
+}
+QPushButton:hover {
+	background-color: rgba(255, 255, 255, 0.3);
+}
+QPushButton:pressed {
+	background-color: rgba(255, 255, 255, 0.5);
+}</string>
    </property>
    <property name="text">
     <string/>
@@ -58,9 +67,9 @@
   <widget class="QPushButton" name="RecoredBtn">
    <property name="geometry">
     <rect>
-     <x>5</x>
-     <y>80</y>
-     <width>40</width>
+     <x>0</x>
+     <y>90</y>
+     <width>45</width>
      <height>40</height>
     </rect>
    </property>
@@ -70,11 +79,32 @@
    <property name="contextMenuPolicy">
     <enum>Qt::DefaultContextMenu</enum>
    </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgba(255, 255, 255, 0);</string>
+    <string notr="true">QPushButton {
+	background-color: rgba(255, 255, 255, 0);
+	border:none;
+}
+QPushButton:hover {
+	background-color: rgba(255, 255, 255, 0.3);
+}
+QPushButton:pressed {
+	background-color: rgba(255, 255, 255, 0.5);
+}</string>
    </property>
    <property name="text">
     <string/>
+   </property>
+   <property name="autoRepeat">
+    <bool>false</bool>
+   </property>
+   <property name="autoExclusive">
+    <bool>false</bool>
+   </property>
+   <property name="flat">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QLabel" name="AddressSider">
@@ -94,7 +124,7 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>85</y>
+     <y>95</y>
      <width>5</width>
      <height>30</height>
     </rect>
@@ -107,10 +137,13 @@
    <property name="geometry">
     <rect>
      <x>824</x>
-     <y>10</y>
+     <y>8</y>
      <width>15</width>
      <height>15</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgba(255, 255, 255, 0);</string>
@@ -119,6 +152,13 @@
     <string/>
    </property>
   </widget>
+  <zorder>Container</zorder>
+  <zorder>bgi</zorder>
+  <zorder>AddressBtn</zorder>
+  <zorder>RecoredBtn</zorder>
+  <zorder>AddressSider</zorder>
+  <zorder>RecordSider</zorder>
+  <zorder>CloseBtn</zorder>
  </widget>
  <resources/>
  <connections/>
