完善主窗口框架

--- a/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/AdressInfoWidget.ui
+++ b/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/AdressInfoWidget.ui
@@ -6,13 +6,51 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>293</width>
+    <height>57</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>AdressInfoWidget</string>
   </property>
+  <widget class="QLabel" name="NameRemark">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>273</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>等线</family>
+     <pointsize>18</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>李伟文</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="UnitIndentity">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>35</y>
+     <width>273</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>等线</family>
+     <pointsize>9</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>南航流火</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
