--- a/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/MainWidget.ui
+++ b/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/MainWidget.ui
@@ -26,16 +26,6 @@
     <string/>
    </property>
   </widget>
-  <widget class="QWidget" name="Container" native="true">
-   <property name="geometry">
-    <rect>
-     <x>45</x>
-     <y>38</y>
-     <width>803</width>
-     <height>442</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QPushButton" name="AddressBtn">
    <property name="geometry">
     <rect>
@@ -111,10 +101,16 @@ QPushButton:pressed {
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>45</y>
+     <y>50</y>
      <width>5</width>
-     <height>30</height>
+     <height>20</height>
     </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>true</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
    </property>
    <property name="text">
     <string/>
@@ -124,10 +120,16 @@ QPushButton:pressed {
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>95</y>
+     <y>100</y>
      <width>5</width>
-     <height>30</height>
+     <height>20</height>
     </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>true</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
    </property>
    <property name="text">
     <string/>
@@ -152,13 +154,45 @@ QPushButton:pressed {
     <string/>
    </property>
   </widget>
-  <zorder>Container</zorder>
+  <widget class="QScrollArea" name="Container">
+   <property name="geometry">
+    <rect>
+     <x>45</x>
+     <y>38</y>
+     <width>803</width>
+     <height>442</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border: none;</string>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
+   <property name="horizontalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
+   <property name="widgetResizable">
+    <bool>true</bool>
+   </property>
+   <widget class="QWidget" name="scrollAreaWidgetContents">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>803</width>
+      <height>442</height>
+     </rect>
+    </property>
+   </widget>
+  </widget>
   <zorder>bgi</zorder>
   <zorder>AddressBtn</zorder>
   <zorder>RecoredBtn</zorder>
-  <zorder>AddressSider</zorder>
-  <zorder>RecordSider</zorder>
   <zorder>CloseBtn</zorder>
+  <zorder>Container</zorder>
+  <zorder>RecordSider</zorder>
+  <zorder>AddressSider</zorder>
  </widget>
  <resources/>
  <connections/>
