--- a/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/RecordsWidget.ui
+++ b/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/RecordsWidget.ui
@@ -22,6 +22,12 @@
      <height>442</height>
     </rect>
    </property>
+   <property name="autoFillBackground">
+    <bool>true</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(204, 204, 204);</string>
+   </property>
    <property name="text">
     <string/>
    </property>
@@ -80,6 +86,10 @@
      <height>382</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgba(255, 255, 255, 0);
+border: none;</string>
+   </property>
    <property name="verticalScrollBarPolicy">
     <enum>Qt::ScrollBarAsNeeded</enum>
    </property>
@@ -91,8 +101,8 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>291</width>
-      <height>380</height>
+      <width>293</width>
+      <height>382</height>
      </rect>
     </property>
    </widget>
