--- a/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/AdressInfoWidget.ui
+++ b/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/AdressInfoWidget.ui
@@ -29,7 +29,7 @@
     </font>
    </property>
    <property name="text">
-    <string>李伟文</string>
+    <string/>
    </property>
   </widget>
   <widget class="QLabel" name="UnitIndentity">
@@ -48,7 +48,7 @@
     </font>
    </property>
    <property name="text">
-    <string>南航流火</string>
+    <string/>
    </property>
   </widget>
  </widget>
