--- a/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/AdressInfoBtn.ui
+++ b/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/AdressInfoBtn.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>AdressInfoWidget</class>
- <widget class="QWidget" name="AdressInfoWidget">
+ <class>AdressInfoBtn</class>
+ <widget class="QWidget" name="AdressInfoBtn">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>AdressInfoWidget</string>
+   <string>AdressInfoBtn</string>
   </property>
   <widget class="QLabel" name="NameRemark">
    <property name="geometry">
