--- a/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/RecordInfoBtn.ui
+++ b/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/RecordInfoBtn.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>RecordInfoWidget</class>
- <widget class="QWidget" name="RecordInfoWidget">
+ <class>RecordInfoBtn</class>
+ <widget class="QWidget" name="RecordInfoBtn">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>RecordInfoWidget</string>
+   <string>RecordInfoBtn</string>
   </property>
   <widget class="QLabel" name="PhoneNumber">
    <property name="geometry">
