--- a/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/AdressesWidget.ui
+++ b/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/AdressesWidget.ui
@@ -54,7 +54,7 @@
   <widget class="QPushButton" name="AddBtn">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>180</x>
      <y>10</y>
      <width>40</width>
      <height>40</height>
@@ -191,6 +191,84 @@ border: none;</string>
      </rect>
     </property>
    </widget>
+  </widget>
+  <widget class="QPushButton" name="DelBtn">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>10</y>
+     <width>40</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Segoe UI</family>
+     <pointsize>32</pointsize>
+     <weight>50</weight>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+	background-color: rgba(255, 255, 255, 0);
+	border:none;
+}
+QPushButton:hover {
+	background-color: rgba(0, 0, 0, 0.2);
+}
+QPushButton:pressed {
+	background-color: rgba(0, 0, 0, 0.3);
+}</string>
+   </property>
+   <property name="text">
+    <string>×</string>
+   </property>
+   <property name="flat">
+    <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="ModifyBtn">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>10</y>
+     <width>40</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Segoe UI</family>
+     <pointsize>32</pointsize>
+     <weight>50</weight>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+	background-color: rgba(255, 255, 255, 0);
+	border:none;
+}
+QPushButton:hover {
+	background-color: rgba(0, 0, 0, 0.2);
+}
+QPushButton:pressed {
+	background-color: rgba(0, 0, 0, 0.3);
+}</string>
+   </property>
+   <property name="text">
+    <string>≡</string>
+   </property>
+   <property name="flat">
+    <bool>false</bool>
+   </property>
   </widget>
  </widget>
  <resources/>
