--- a/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/AdressDetailInput.ui
+++ b/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/Resources/AdressDetailInput.ui
@@ -306,28 +306,37 @@
     <item row="5" column="3">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="Upload">
         <property name="font">
          <font>
           <family>等线</family>
           <pointsize>12</pointsize>
          </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">border: 1px solid rgb(0, 0, 0);</string>
         </property>
         <property name="text">
          <string>保存</string>
         </property>
+        <property name="flat">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="Cancel">
         <property name="font">
          <font>
           <family>等线</family>
           <pointsize>12</pointsize>
          </font>
         </property>
+        <property name="styleSheet">
+         <string notr="true">border: 1px solid rgb(0, 0, 0);</string>
+        </property>
         <property name="text">
-         <string>取消</string>
+         <string>清空</string>
         </property>
        </widget>
       </item>
